--- a/style.css
+++ b/style.css
@@ -48,6 +48,7 @@ font-family: 'Poppins', sans-serif;
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
+    
 }
 .bg-car2{
     background-image: linear-gradient(
@@ -62,7 +63,7 @@ font-family: 'Poppins', sans-serif;
     background-image: linear-gradient(
         rgba(0,0,0,0.5),
         rgba(0,0,0,0.5)
-    ), url(imagenes/c3.jpg);
+    ), url(imagenes/tapizado.jpg);
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -89,7 +90,34 @@ font-family: 'Poppins', sans-serif;
     background-image: linear-gradient(
         rgba(0,0,0,0.5),
         rgba(0,0,0,0.5)
-    ), url(imagenes/aleron.jpg);
+    ), url(imagenes/bacas.jpg);
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+.bg-car7{
+    background-image: linear-gradient(
+        rgba(0,0,0,0.5),
+        rgba(0,0,0,0.5)
+    ), url(imagenes/tesla2.jpeg);
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+.bg-car8{
+    background-image: linear-gradient(
+        rgba(0,0,0,0.5),
+        rgba(0,0,0,0.5)
+    ), url(imagenes/tesla3.png);
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+.bg-car9{
+    background-image: linear-gradient(
+        rgba(0,0,0,0.5),
+        rgba(0,0,0,0.5)
+    ), url(imagenes/tesla1.webp);
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -106,8 +134,8 @@ font-family: 'Poppins', sans-serif;
     padding: 80px 0;
 }
 .card img{
-    width: 130px;
-    height: 130px;
+    width: 150px;
+    height: 150px;
 }
 .banner {
     padding: 50px 0;
@@ -146,4 +174,30 @@ font-family: 'Poppins', sans-serif;
     .banner {
         margin-bottom: 30px;
     }
+}
+.btn2{
+    box-shadow: rgba(46, 153, 240, 0.4) 0px 5px, rgba(46, 201, 240, 0.3) 0px 10px, rgba(46, 201, 240, 0.2) 0px 15px, rgba(69, 238, 250, 0.1) 0px 20px, rgba(46, 240, 198, 0.05) 0px 25px;
+}
+.nav-link{
+    text-decoration: none;
+    color: inherit;
+    padding: 10px;
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 1.1rem;
+    position: relative;
+}
+.nav-link:after{
+    content: "";
+    width: 0;
+    height: 4px;
+    background-color: cadetblue;
+    position: absolute;
+    bottom: 0;
+    right: 50%;
+    transition: all .5s;
+    will-change: width;
+}
+.nav-link:hover:after{
+    width: 100%;
+    right: 0;
 }
